# AI-ML-5--Terminal-Based-AI-Agent

./: .env.example  .gitignore  Igris-Beta.py  Igris-Enhanced.py  Igris.py  README.md  agent_graph.py  config.py  document_loader.py  ingest_workflow.py  main.py  memory.py  pyproject.toml  requirements.txt  sample.txt  skills.py  system_control.py
.ipynb_checkpoints/: Igris-checkpoint.py
