[project]
name = "igris-agent"
version = "0.1.0"
description = "A terminal-based AI agent powered by Groq and LangChain with specific skills"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Nandhan Golla" },
]

dependencies = [
    "langchain>=0.3.14,<0.4",
    "langchain-groq>=0.2.4,<0.3",
    "langchain-community>=0.3.14,<0.4",
    "langchain-huggingface>=0.1.2,<0.2",
    "langgraph>=0.2.60,<0.3",
    "faiss-cpu>=1.9.0,<2.0",
    "sentence-transformers>=3.3.1,<4.0",
    "pydantic>=2.10.5,<3.0",
    "python-dotenv>=1.0.1,<2.0",
    "duckduckgo-search>=7.3.2,<8.0",
    "psutil>=6.1.1,<7.0",
    "pypdf>=5.1.0,<6.0",
    "python-docx>=1.1.2,<2.0",
    "gtts>=2.5.4,<3.0",
    "pyserial>=3.5,<4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
